fix annoying ltr scroll on smaller screens

--- a/2019/resources/sass/_components.scss
+++ b/2019/resources/sass/_components.scss
@@ -545,3 +545,7 @@ footer {
         transform: translateY(3px);
     }
 }
+
+header.jumbo.fullscreen{
+    width: 100%;
+}
